--- a/.drs/drs.config.yaml
+++ b/.drs/drs.config.yaml
@@ -20,7 +20,7 @@ review:
   # Default model for all agents (required)
   # For built-in providers: anthropic/claude-sonnet-4-5-20250929, openai/gpt-4o, zhipuai/glm-4.7
   # For custom providers: provider-name/model-name
-  defaultModel: anthropic/claude-sonnet-4-5-20250929
+  defaultModel: opencode/glm-4.7-free
 
   # Review agents
   # Simple format (uses defaultModel):
