Add unified check script

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "format": "prettier --write 'src/**/*.{ts,json}'",
     "format:check": "prettier --check 'src/**/*.{ts,json}'",
+    "check:all": "npm run format && npm run lint:fix && npm run build && npm test && npm run format:check && npm run lint",
     "type-check": "tsc --noEmit",
     "prepublishOnly": "npm run build"
   },
