Enable debug logging in PR review workflow

--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -107,7 +107,8 @@ jobs:
             --owner ${{ github.event.repository.owner.login }} \
             --repo ${{ github.event.repository.name }} \
             --pr ${{ github.event.pull_request.number }} \
-            --post-comments
+            --post-comments \
+            --debug
 
   # Review for external contributors - requires environment approval OR safe-to-review label
   review-external:
@@ -178,7 +179,8 @@ jobs:
             --owner ${{ github.event.repository.owner.login }} \
             --repo ${{ github.event.repository.name }} \
             --pr ${{ github.event.pull_request.number }} \
-            --post-comments
+            --post-comments \
+            --debug
 
   # Notify when external PR is waiting for approval
   notify-external:
