--- a/.drs/drs.config.yaml
+++ b/.drs/drs.config.yaml
@@ -17,10 +17,13 @@
 #           name: "Model Display Name"
 
 review:
-  # Default model for all agents (required)
+  # Default model and skills for all agents (required)
   # For built-in providers: anthropic/claude-sonnet-4-5-20250929, openai/gpt-4o, zhipuai/glm-4.7
   # For custom providers: provider-name/model-name
-  defaultModel: opencode/glm-4.7-free
+  default:
+    model: opencode/glm-4.7-free
+    skills:
+      - cli-testing
 
   # Review mode
   # Options: multi-agent | unified | hybrid
