Add frontmatter to review-done skill

--- a/.drs/drs.config.yaml
+++ b/.drs/drs.config.yaml
@@ -24,6 +24,7 @@ review:
     model: opencode/glm-4.7-free
     skills:
       - cli-testing
+      - review-done
 
   # Review mode
   # Options: multi-agent | unified | hybrid
