--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "@anthropic-ai/sdk": "^0.32.0",
     "@gitbeaker/node": "^35.8.1",
     "@octokit/rest": "^21.0.0",
-    "@opencode-ai/plugin": "^1.1.23",
-    "@opencode-ai/sdk": "^1.1.7",
+    "@opencode-ai/plugin": "1.2.6",
+    "@opencode-ai/sdk": "1.2.6",
     "ajv": "^8.17.1",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
