--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,8 @@ dist
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .npm-cache/
+
+# vaibhav ralph
+prd.json
+progress.txt
+.last-branch
