--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 # DRS Development Environment
 
-# OpenCode Server (optional - leave empty to start in-process server)
-# OPENCODE_SERVER=http://localhost:3000
+# Pi runtime endpoint (optional)
+# If unset, DRS runs Pi in-process.
+# PI_SERVER=http://localhost:3000
+# Legacy alias still recognized: OPENCODE_SERVER
 
 # Provider API Keys (set the one(s) you need based on your model configuration)
 # For Anthropic/Claude models (e.g., anthropic/claude-opus-4-5-20251101)
@@ -13,12 +15,8 @@ ANTHROPIC_API_KEY=sk-ant-your-key-here
 # For OpenAI models (e.g., openai/gpt-4)
 # OPENAI_API_KEY=sk-your-openai-key-here
 
-# For OpenCode Zen models (e.g., opencode/gpt-5.1-codex)
-# Note: This requires special handling in GitHub Actions to write to auth.json
-# OPENCODE_ZEN_API_KEY=your-opencode-zen-key-here
-
 # For other providers, set the appropriate API key environment variable
-# The OpenCode SDK will automatically use the correct key based on your model configuration
+# Pi runtime automatically reads provider API keys from environment variables
 
 # GitLab
 GITLAB_URL=https://gitlab.com
