refactor: enforce in-process runtime and add review-local integration test

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
 # DRS Development Environment
 
-# Pi runtime endpoint (optional)
-# If unset, DRS runs Pi in-process.
-# PI_SERVER=http://localhost:3000
-# Legacy alias still recognized: OPENCODE_SERVER
+# Pi runtime mode
+# DRS always runs Pi in-process (no remote runtime endpoint required).
 
 # Provider API Keys (set the one(s) you need based on your model configuration)
 # For Anthropic/Claude models (e.g., anthropic/claude-opus-4-5-20251101)
