fix(ci): resolve opencode key from secrets in PR review workflow

--- a/.github/workflows/pr-review.yml
+++ b/.github/workflows/pr-review.yml
@@ -69,38 +69,34 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install OpenCode CLI
-        run: npm install -g opencode-ai
-
       - name: Install dependencies
         run: npm ci
 
       - name: Build DRS
         run: npm run build
 
-      - name: Setup OpenCode Zen Authentication
-        if: env.OPENCODE_ZEN_API_KEY != ''
+      - name: Resolve OpenCode provider key
         env:
+          OPENCODE_API_KEY: ${{ secrets.OPENCODE_API_KEY }}
           OPENCODE_ZEN_API_KEY: ${{ secrets.OPENCODE_ZEN_API_KEY }}
         run: |
-          echo "🔑 Setting up OpenCode Zen authentication..."
-          mkdir -p ~/.local/share/opencode
-          cat > ~/.local/share/opencode/auth.json <<EOF
-          {
-            "opencode": {
-              "type": "api",
-              "key": "${OPENCODE_ZEN_API_KEY}"
-            }
-          }
-          EOF
-          echo "✅ OpenCode Zen auth.json created"
+          RESOLVED_KEY="${OPENCODE_API_KEY:-$OPENCODE_ZEN_API_KEY}"
+
+          if [ -z "$RESOLVED_KEY" ]; then
+            echo "❌ Missing OpenCode provider key. Configure OPENCODE_API_KEY (or legacy OPENCODE_ZEN_API_KEY) in repository secrets."
+            exit 1
+          fi
+
+          echo "OPENCODE_API_KEY=$RESOLVED_KEY" >> "$GITHUB_ENV"
+          echo "✅ OpenCode provider key resolved"
 
       - name: Review Pull Request (Trusted Contributor)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-          OPENCODE_ZEN_API_KEY: ${{ secrets.OPENCODE_ZEN_API_KEY }}
-          OPENCODE_API_KEY: ${{ secrets.OPENCODE_ZEN_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          ZHIPU_API_KEY: ${{ secrets.ZHIPU_API_KEY }}
+          OPENCODE_API_KEY: ${{ env.OPENCODE_API_KEY }}
         run: |
           echo "🚀 Starting PR review for trusted contributor..."
           echo "👤 Author: ${{ github.event.pull_request.user.login }} (trusted)"
@@ -142,38 +138,34 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install OpenCode CLI
-        run: npm install -g opencode-ai
-
       - name: Install dependencies
         run: npm ci
 
       - name: Build DRS
         run: npm run build
 
-      - name: Setup OpenCode Zen Authentication
-        if: env.OPENCODE_ZEN_API_KEY != ''
+      - name: Resolve OpenCode provider key
         env:
+          OPENCODE_API_KEY: ${{ secrets.OPENCODE_API_KEY }}
           OPENCODE_ZEN_API_KEY: ${{ secrets.OPENCODE_ZEN_API_KEY }}
         run: |
-          echo "🔑 Setting up OpenCode Zen authentication..."
-          mkdir -p ~/.local/share/opencode
-          cat > ~/.local/share/opencode/auth.json <<EOF
-          {
-            "opencode": {
-              "type": "api",
-              "key": "${OPENCODE_ZEN_API_KEY}"
-            }
-          }
-          EOF
-          echo "✅ OpenCode Zen auth.json created"
+          RESOLVED_KEY="${OPENCODE_API_KEY:-$OPENCODE_ZEN_API_KEY}"
+
+          if [ -z "$RESOLVED_KEY" ]; then
+            echo "❌ Missing OpenCode provider key. Configure OPENCODE_API_KEY (or legacy OPENCODE_ZEN_API_KEY) in repository secrets."
+            exit 1
+          fi
+
+          echo "OPENCODE_API_KEY=$RESOLVED_KEY" >> "$GITHUB_ENV"
+          echo "✅ OpenCode provider key resolved"
 
       - name: Review Pull Request (External Contributor)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-          OPENCODE_ZEN_API_KEY: ${{ secrets.OPENCODE_ZEN_API_KEY }}
-          OPENCODE_API_KEY: ${{ secrets.OPENCODE_ZEN_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          ZHIPU_API_KEY: ${{ secrets.ZHIPU_API_KEY }}
+          OPENCODE_API_KEY: ${{ env.OPENCODE_API_KEY }}
         run: |
           echo "🚀 Starting PR review for external contributor..."
           echo "👤 Author: ${{ github.event.pull_request.user.login }} (external - approved)"
