--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@diff-review-system/drs",
-  "version": "2.2.1",
+  "version": "3.0.0-alpha.0",
   "description": "Intelligent code review platform for GitLab and GitHub - Enterprise-grade automated analysis",
   "type": "module",
   "main": "dist/index.js",
