--- a/.drs/drs.config.yaml
+++ b/.drs/drs.config.yaml
@@ -97,6 +97,10 @@ describe:
 # Context compression (diff size management)
 contextCompression:
   enabled: true
+  # Dynamic budget = thresholdPercent × model context window
+  # Example: 0.15 = 15% of context window
+  thresholdPercent: 0.15
+  # Fallback cap when context window metadata is unavailable
   maxTokens: 32000
   softBufferTokens: 1500
   hardBufferTokens: 1000
